--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -57,71 +57,21 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
+    "def identify_new_records(master_df, gha_df, open_pos_df, month, new_records):\n",
+    "    # Find records in gha_df not present in master_df and prepare for adding to new_records\n",
+    "    gha_new_records = gha_df[~gha_df['Position ID'].isin(master_df['Position ID'])].copy()\n",
+    "    gha_new_records.loc[:, 'Source'] = 'GHA'\n",
+    "    gha_new_records.loc[:, 'Month Added'] = month\n",
     "\n",
-    "# Sample master DataFrame\n",
-    "master_df = pd.DataFrame({\n",
-    "    'Position ID': ['00123', '00456', '000789', '01001'],\n",
-    "    'Source': ['GHA', 'Open Positions', 'GHA', 'Open Positions']\n",
-    "})\n",
-    "\n",
-    "# Sample monthly GHA and Open Positions data (simulating gha_jan_df, gha_feb_df, etc.)\n",
-    "gha_monthly_files = {\n",
-    "    'Jan 24': pd.DataFrame({'Position ID': ['00123', '00456']}),\n",
-    "    'Feb 24': pd.DataFrame({'Position ID': ['000789', '01001', '02002']}),  # New record: '02002'\n",
-    "    'Mar 24': pd.DataFrame({'Position ID': ['00123', '01001', '03003']})   # New record: '03003'\n",
-    "}\n",
-    "\n",
-    "open_pos_monthly_files = {\n",
-    "    'Jan 24': pd.DataFrame({'Position ID': ['000789', '00456']}),\n",
-    "    'Feb 24': pd.DataFrame({'Position ID': ['00123', '01001', '04004']}),  # New record: '04004'\n",
-    "    'Mar 24': pd.DataFrame({'Position ID': ['000789', '01001', '05005']})  # New record: '05005'\n",
-    "}\n",
-    "\n",
-    "# Standardize Position ID length in master_df\n",
-    "max_length = master_df['Position ID'].str.len().max()\n",
-    "master_df['Position ID'] = master_df['Position ID'].str.zfill(max_length)\n",
-    "\n",
-    "# DataFrame to capture new records not present in the master_df\n",
-    "new_records = pd.DataFrame()\n",
-    "\n",
-    "# Loop over each month and update respective columns based on the source condition\n",
-    "for month in gha_monthly_files.keys():\n",
-    "    gha_df = gha_monthly_files[month]\n",
-    "    open_pos_df = open_pos_monthly_files[month]\n",
-    "    \n",
-    "    # Standardize Position IDs in both GHA and Open Positions files\n",
-    "    gha_df['Position ID'] = gha_df['Position ID'].str.zfill(max_length)\n",
-    "    open_pos_df['Position ID'] = open_pos_df['Position ID'].str.zfill(max_length)\n",
-    "    \n",
-    "    # Use np.where to apply conditions based on the 'Source' column\n",
-    "    master_df[month] = np.where(\n",
-    "        master_df['Source'] == 'GHA', \n",
-    "        master_df['Position ID'].apply(lambda x: 1 if x in gha_df['Position ID'].values else 0),\n",
-    "        np.where(\n",
-    "            master_df['Source'] == 'Open Positions', \n",
-    "            master_df['Position ID'].apply(lambda x: 1 if x in open_pos_df['Position ID'].values else 0),\n",
-    "            np.nan  # Leave as NaN if Source is neither GHA nor Open Positions\n",
-    "        )\n",
-    "    )\n",
-    "\n",
-    "    # Find records in gha_df not present in master_df and add them to new_records\n",
-    "    gha_new_records = gha_df[~gha_df['Position ID'].isin(master_df['Position ID'])]\n",
-    "    gha_new_records['Source'] = 'GHA'\n",
-    "    gha_new_records['Month Added'] = month\n",
-    "\n",
-    "    # Find records in open_pos_df not present in master_df and add them to new_records\n",
-    "    open_pos_new_records = open_pos_df[~open_pos_df['Position ID'].isin(master_df['Position ID'])]\n",
-    "    open_pos_new_records['Source'] = 'Open Positions'\n",
-    "    open_pos_new_records['Month Added'] = month\n",
+    "    # Find records in open_pos_df not present in master_df and prepare for adding to new_records\n",
+    "    open_pos_new_records = open_pos_df[~open_pos_df['Position ID'].isin(master_df['Position ID'])].copy()\n",
+    "    open_pos_new_records.loc[:, 'Source'] = 'Open Positions'\n",
+    "    open_pos_new_records.loc[:, 'Month Added'] = month\n",
     "\n",
     "    # Append new records from both GHA and Open Positions to new_records DataFrame\n",
     "    new_records = pd.concat([new_records, gha_new_records, open_pos_new_records], ignore_index=True)\n",
-    "\n",
-    "# Display results\n",
-    "print(\"Updated Master DataFrame:\\n\", master_df)\n",
-    "print(\"\\nNew Records DataFrame:\\n\", new_records)\n"
+    "    \n",
+    "    return new_records\n"
    ]
   },
   {
