--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d10657e2",
    "metadata": {},
    "outputs": [
@@ -18,60 +18,60 @@
       "3      001001  Open Positions     0.0     1.0     1.0\n",
       "\n",
       "New Records DataFrame:\n",
-      "   Position ID          Source Month Added\n",
-      "0      002002             GHA      Feb 24\n",
-      "1      004004  Open Positions      Feb 24\n",
-      "2      003003             GHA      Mar 24\n",
-      "3      005005  Open Positions      Mar 24\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-1-548c8a286ffb>:52: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  gha_new_records['Source'] = 'GHA'\n",
-      "<ipython-input-1-548c8a286ffb>:53: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  gha_new_records['Month Added'] = month\n",
-      "<ipython-input-1-548c8a286ffb>:57: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  open_pos_new_records['Source'] = 'Open Positions'\n",
-      "<ipython-input-1-548c8a286ffb>:58: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  open_pos_new_records['Month Added'] = month\n"
+      "   Position ID          Source Month Added Month_Added\n",
+      "0      002002             GHA         NaN      Feb 24\n",
+      "1      004004  Open Positions         NaN      Feb 24\n",
+      "2      003003             GHA         NaN      Mar 24\n",
+      "3      005005  Open Positions         NaN      Mar 24\n"
      ]
     }
    ],
    "source": [
-    "def identify_new_records(master_df, gha_df, open_pos_df, month, new_records):\n",
-    "    # Find records in gha_df not present in master_df and prepare for adding to new_records\n",
-    "    gha_new_records = gha_df[~gha_df['Position ID'].isin(master_df['Position ID'])].copy()\n",
-    "    gha_new_records.loc[:, 'Source'] = 'GHA'\n",
-    "    gha_new_records.loc[:, 'Month Added'] = month\n",
+    "# Declare new_records with relevant columns\n",
+    "new_records = pd.DataFrame(columns=['Position ID', 'Source', 'Month Added'])\n",
     "\n",
-    "    # Find records in open_pos_df not present in master_df and prepare for adding to new_records\n",
-    "    open_pos_new_records = open_pos_df[~open_pos_df['Position ID'].isin(master_df['Position ID'])].copy()\n",
-    "    open_pos_new_records.loc[:, 'Source'] = 'Open Positions'\n",
-    "    open_pos_new_records.loc[:, 'Month Added'] = month\n",
-    "\n",
-    "    # Append new records from both GHA and Open Positions to new_records DataFrame\n",
-    "    new_records = pd.concat([new_records, gha_new_records, open_pos_new_records], ignore_index=True)\n",
+    "def process_monthly_data(master_df, gha_monthly_files, open_pos_monthly_files):\n",
+    "    global new_records\n",
+    "    max_length = master_df['Position ID'].str.len().max()\n",
     "    \n",
-    "    return new_records\n"
+    "    for month in gha_monthly_files.keys():\n",
+    "        gha_df = gha_monthly_files[month].copy()\n",
+    "        open_pos_df = open_pos_monthly_files[month].copy()\n",
+    "\n",
+    "        # Standardize Position IDs\n",
+    "        gha_df['Position ID'] = gha_df['Position ID'].str.zfill(max_length)\n",
+    "        open_pos_df['Position ID'] = open_pos_df['Position ID'].str.zfill(max_length)\n",
+    "        \n",
+    "        # Update master_df with 1/0 based on presence in GHA and Open Positions\n",
+    "        master_df[month] = np.where(\n",
+    "            master_df['Source'] == 'GHA', \n",
+    "            master_df['Position ID'].apply(lambda x: 1 if x in gha_df['Position ID'].values else 0),\n",
+    "            np.where(\n",
+    "                master_df['Source'] == 'Open Positions', \n",
+    "                master_df['Position ID'].apply(lambda x: 1 if x in open_pos_df['Position ID'].values else 0),\n",
+    "                np.nan\n",
+    "            )\n",
+    "        )\n",
+    "        \n",
+    "        # Identify new records in GHA not in master_df or previously in new_records\n",
+    "        gha_new_records = gha_df[~gha_df['Position ID'].isin(pd.concat([master_df['Position ID'], new_records['Position ID']]))]\n",
+    "        gha_new_records = gha_new_records.assign(Source='GHA', Month_Added=month)\n",
+    "\n",
+    "        # Identify new records in Open Positions not in master_df or previously in new_records\n",
+    "        open_pos_new_records = open_pos_df[~open_pos_df['Position ID'].isin(pd.concat([master_df['Position ID'], new_records['Position ID']]))]\n",
+    "        open_pos_new_records = open_pos_new_records.assign(Source='Open Positions', Month_Added=month)\n",
+    "\n",
+    "        # Append unique new records from both GHA and Open Positions\n",
+    "        new_records = pd.concat([new_records, gha_new_records, open_pos_new_records], ignore_index=True)\n",
+    "    \n",
+    "    return master_df, new_records\n",
+    "\n",
+    "# Call the function and get updated master_df and new_records\n",
+    "master_df, new_records = process_monthly_data(master_df, gha_monthly_files, open_pos_monthly_files)\n",
+    "\n",
+    "# Display the resulting DataFrames\n",
+    "print(\"Updated Master DataFrame:\\n\", master_df)\n",
+    "print(\"\\nNew Records DataFrame:\\n\", new_records)\n"
    ]
   },
   {
