--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -3,70 +3,68 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf0e436a",
+   "id": "b409b6dc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Declare new_records with relevant columns\n",
-    "new_records = pd.DataFrame(columns=['Position ID', 'Source', 'Month_Added'])\n",
+    "# Initialize new_records with the same columns as master_df plus 'Source' and 'Month_Added'\n",
+    "new_records = pd.DataFrame(columns=master_df.columns.tolist() + ['Source', 'Month_Added'])\n",
     "\n",
-    "def process_monthly_data(master_df, gha_monthly_files, open_pos_monthly_files):\n",
-    "    global new_records\n",
+    "# Define function to process each month\n",
+    "def process_single_month(master_df, month, gha_file, open_pos_file, new_records):\n",
     "    max_length = master_df['Position ID'].str.len().max()\n",
     "\n",
-    "    # Initialize columns for each month in both master_df and new_records\n",
-    "    all_months = list(gha_monthly_files.keys())\n",
-    "    for month in all_months:\n",
-    "        master_df[month] = 0  # Initialize to 0 by default\n",
-    "        new_records[month] = 0  # Initialize to 0 by default\n",
+    "    # Standardize Position IDs\n",
+    "    gha_file['Position ID'] = gha_file['Position ID'].str.zfill(max_length)\n",
+    "    open_pos_file['Position ID'] = open_pos_file['Position ID'].str.zfill(max_length)\n",
     "    \n",
-    "    # Process each month and update both master_df and new_records\n",
-    "    for month in all_months:\n",
-    "        gha_df = gha_monthly_files[month].copy()\n",
-    "        open_pos_df = open_pos_monthly_files[month].copy()\n",
-    "\n",
-    "        # Standardize Position IDs\n",
-    "        gha_df['Position ID'] = gha_df['Position ID'].str.zfill(max_length)\n",
-    "        open_pos_df['Position ID'] = open_pos_df['Position ID'].str.zfill(max_length)\n",
-    "        \n",
-    "        # Update master_df with 1 based on presence in GHA and Open Positions\n",
-    "        master_df[month] = np.where(\n",
-    "            master_df['Source'] == 'GHA', \n",
-    "            master_df['Position ID'].apply(lambda x: 1 if x in gha_df['Position ID'].values else 0),\n",
-    "            np.where(\n",
-    "                master_df['Source'] == 'Open Positions', \n",
-    "                master_df['Position ID'].apply(lambda x: 1 if x in open_pos_df['Position ID'].values else 0),\n",
-    "                np.nan\n",
-    "            )\n",
+    "    # Update master_df with 1 based on presence in GHA and Open Positions\n",
+    "    master_df[month] = np.where(\n",
+    "        master_df['Source'] == 'GHA', \n",
+    "        master_df['Position ID'].apply(lambda x: 1 if x in gha_file['Position ID'].values else 0),\n",
+    "        np.where(\n",
+    "            master_df['Source'] == 'Open Positions', \n",
+    "            master_df['Position ID'].apply(lambda x: 1 if x in open_pos_file['Position ID'].values else 0),\n",
+    "            np.nan\n",
     "        )\n",
-    "        \n",
-    "        # Identify new records in GHA not in master_df or previously in new_records\n",
-    "        gha_new_records = gha_df[~gha_df['Position ID'].isin(pd.concat([master_df['Position ID'], new_records['Position ID']]))]\n",
-    "        gha_new_records = gha_new_records.assign(Source='GHA', Month_Added=month)\n",
+    "    )\n",
+    "    \n",
+    "    # Identify new records in GHA not in master_df or previously in new_records\n",
+    "    gha_new_records = gha_file[~gha_file['Position ID'].isin(pd.concat([master_df['Position ID'], new_records['Position ID']]))]\n",
+    "    gha_new_records = gha_new_records.assign(Source='GHA', Month_Added=month)\n",
     "\n",
-    "        # Identify new records in Open Positions not in master_df or previously in new_records\n",
-    "        open_pos_new_records = open_pos_df[~open_pos_df['Position ID'].isin(pd.concat([master_df['Position ID'], new_records['Position ID']]))]\n",
-    "        open_pos_new_records = open_pos_new_records.assign(Source='Open Positions', Month_Added=month)\n",
+    "    # Identify new records in Open Positions not in master_df or previously in new_records\n",
+    "    open_pos_new_records = open_pos_file[~open_pos_file['Position ID'].isin(pd.concat([master_df['Position ID'], new_records['Position ID']]))]\n",
+    "    open_pos_new_records = open_pos_new_records.assign(Source='Open Positions', Month_Added=month)\n",
     "\n",
-    "        # Append unique new records from both GHA and Open Positions\n",
-    "        new_records = pd.concat([new_records, gha_new_records, open_pos_new_records], ignore_index=True)\n",
+    "    # Concatenate the new records found this month to new_records\n",
+    "    new_month_records = pd.concat([gha_new_records, open_pos_new_records], ignore_index=True)\n",
     "\n",
-    "        # For both GHA and Open Positions, mark 1/0 for all months in new_records\n",
-    "        for idx, row in new_records.iterrows():\n",
-    "            pos_id = row['Position ID']\n",
-    "            src = row['Source']\n",
-    "            for m in all_months:\n",
-    "                if src == 'GHA':\n",
-    "                    new_records.at[idx, m] = 1 if pos_id in gha_monthly_files.get(m, pd.DataFrame())['Position ID'].values else 0\n",
-    "                elif src == 'Open Positions':\n",
-    "                    new_records.at[idx, m] = 1 if pos_id in open_pos_monthly_files.get(m, pd.DataFrame())['Position ID'].values else 0\n",
+    "    # Add columns for all months in new_records and initialize all previous months to 0\n",
+    "    for mth in master_df.columns[2:]:  # Assuming month columns start from index 2 in master_df\n",
+    "        if mth < month:\n",
+    "            new_month_records[mth] = 0\n",
+    "        elif mth == month:\n",
+    "            new_month_records[mth] = 1\n",
+    "        else:\n",
+    "            new_month_records[mth] = np.nan\n",
+    "\n",
+    "    # Fill in new_month_records with only the required columns\n",
+    "    new_month_records = new_month_records[master_df.columns.tolist() + ['Source', 'Month_Added']]\n",
+    "    new_records = pd.concat([new_records, new_month_records], ignore_index=True)\n",
     "\n",
     "    return master_df, new_records\n",
     "\n",
-    "# Call the function and get updated master_df and new_records\n",
-    "master_df, new_records = process_monthly_data(master_df, gha_monthly_files, open_pos_monthly_files)\n",
+    "# Process each month\n",
+    "for month, gha_file in gha_monthly_files.items():\n",
+    "    open_pos_file = open_pos_monthly_files[month]\n",
+    "    master_df, new_records = process_single_month(master_df, month, gha_file, open_pos_file, new_records)\n",
     "\n",
-    "# Display the resulting DataFrames\n",
+    "# Fill any remaining NaN values in new_records with 0 for months not reached yet\n",
+    "for col in master_df.columns[2:]:  # Month columns assumed to start from index 2\n",
+    "    new_records[col].fillna(0, inplace=True)\n",
+    "\n",
+    "# Display the updated DataFrames\n",
     "print(\"Updated Master DataFrame:\\n\", master_df)\n",
     "print(\"\\nNew Records DataFrame:\\n\", new_records)\n"
    ]
@@ -148,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7d64760",
+   "id": "6dd276da",
    "metadata": {},
    "outputs": [],
    "source": []
