--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b409b6dc",
+   "id": "9e6061d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,15 @@
     "    # Standardize Position IDs\n",
     "    gha_file['Position ID'] = gha_file['Position ID'].str.zfill(max_length)\n",
     "    open_pos_file['Position ID'] = open_pos_file['Position ID'].str.zfill(max_length)\n",
+    "\n",
+    "    # Align columns in gha_file and open_pos_file with master_df's structure\n",
+    "    missing_cols = set(master_df.columns) - set(gha_file.columns)\n",
+    "    for col in missing_cols:\n",
+    "        gha_file[col] = np.nan  # Add missing columns with NaN values if not present in gha_file\n",
+    "        \n",
+    "    missing_cols = set(master_df.columns) - set(open_pos_file.columns)\n",
+    "    for col in missing_cols:\n",
+    "        open_pos_file[col] = np.nan  # Add missing columns with NaN values if not present in open_pos_file\n",
     "    \n",
     "    # Update master_df with 1 based on presence in GHA and Open Positions\n",
     "    master_df[month] = np.where(\n",
@@ -146,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6dd276da",
+   "id": "ebc72249",
    "metadata": {},
    "outputs": [],
    "source": []
