--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e6061d0",
+   "id": "f002d0ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,19 +14,19 @@
     "def process_single_month(master_df, month, gha_file, open_pos_file, new_records):\n",
     "    max_length = master_df['Position ID'].str.len().max()\n",
     "\n",
-    "    # Standardize Position IDs\n",
+    "    # Standardize Position IDs in gha_file and open_pos_file\n",
     "    gha_file['Position ID'] = gha_file['Position ID'].str.zfill(max_length)\n",
     "    open_pos_file['Position ID'] = open_pos_file['Position ID'].str.zfill(max_length)\n",
     "\n",
-    "    # Align columns in gha_file and open_pos_file with master_df's structure\n",
-    "    missing_cols = set(master_df.columns) - set(gha_file.columns)\n",
-    "    for col in missing_cols:\n",
-    "        gha_file[col] = np.nan  # Add missing columns with NaN values if not present in gha_file\n",
-    "        \n",
-    "    missing_cols = set(master_df.columns) - set(open_pos_file.columns)\n",
-    "    for col in missing_cols:\n",
-    "        open_pos_file[col] = np.nan  # Add missing columns with NaN values if not present in open_pos_file\n",
-    "    \n",
+    "    # Ensure gha_file and open_pos_file have the same columns as master_df, with NaN for missing ones\n",
+    "    missing_gha_cols = set(master_df.columns) - set(gha_file.columns)\n",
+    "    for col in missing_gha_cols:\n",
+    "        gha_file[col] = np.nan\n",
+    "\n",
+    "    missing_open_pos_cols = set(master_df.columns) - set(open_pos_file.columns)\n",
+    "    for col in missing_open_pos_cols:\n",
+    "        open_pos_file[col] = np.nan\n",
+    "\n",
     "    # Update master_df with 1 based on presence in GHA and Open Positions\n",
     "    master_df[month] = np.where(\n",
     "        master_df['Source'] == 'GHA', \n",
@@ -37,7 +37,7 @@
     "            np.nan\n",
     "        )\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    # Identify new records in GHA not in master_df or previously in new_records\n",
     "    gha_new_records = gha_file[~gha_file['Position ID'].isin(pd.concat([master_df['Position ID'], new_records['Position ID']]))]\n",
     "    gha_new_records = gha_new_records.assign(Source='GHA', Month_Added=month)\n",
@@ -58,7 +58,7 @@
     "        else:\n",
     "            new_month_records[mth] = np.nan\n",
     "\n",
-    "    # Fill in new_month_records with only the required columns\n",
+    "    # Filter to retain only the required columns in new_month_records\n",
     "    new_month_records = new_month_records[master_df.columns.tolist() + ['Source', 'Month_Added']]\n",
     "    new_records = pd.concat([new_records, new_month_records], ignore_index=True)\n",
     "\n",
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebc72249",
+   "id": "7e5c4114",
    "metadata": {},
    "outputs": [],
    "source": []
