--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f002d0ca",
+   "id": "1453d4e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,18 +14,13 @@
     "def process_single_month(master_df, month, gha_file, open_pos_file, new_records):\n",
     "    max_length = master_df['Position ID'].str.len().max()\n",
     "\n",
-    "    # Standardize Position IDs in gha_file and open_pos_file\n",
-    "    gha_file['Position ID'] = gha_file['Position ID'].str.zfill(max_length)\n",
-    "    open_pos_file['Position ID'] = open_pos_file['Position ID'].str.zfill(max_length)\n",
+    "    # Standardize Position IDs in both files to match the master\n",
+    "    gha_file['Position ID'] = gha_file['Position ID'].astype(str).str.zfill(max_length)\n",
+    "    open_pos_file['Position ID'] = open_pos_file['Position ID'].astype(str).str.zfill(max_length)\n",
     "\n",
-    "    # Ensure gha_file and open_pos_file have the same columns as master_df, with NaN for missing ones\n",
-    "    missing_gha_cols = set(master_df.columns) - set(gha_file.columns)\n",
-    "    for col in missing_gha_cols:\n",
-    "        gha_file[col] = np.nan\n",
-    "\n",
-    "    missing_open_pos_cols = set(master_df.columns) - set(open_pos_file.columns)\n",
-    "    for col in missing_open_pos_cols:\n",
-    "        open_pos_file[col] = np.nan\n",
+    "    # Ensure gha_file and open_pos_file have the same columns as master_df\n",
+    "    gha_file = gha_file.reindex(columns=master_df.columns, fill_value=np.nan)\n",
+    "    open_pos_file = open_pos_file.reindex(columns=master_df.columns, fill_value=np.nan)\n",
     "\n",
     "    # Update master_df with 1 based on presence in GHA and Open Positions\n",
     "    master_df[month] = np.where(\n",
@@ -37,20 +32,24 @@
     "            np.nan\n",
     "        )\n",
     "    )\n",
+    "    \n",
+    "    # Identify new records in GHA and Open Positions files\n",
+    "    combined_existing_ids = pd.concat([master_df['Position ID'], new_records['Position ID']], ignore_index=True).unique()\n",
+    "    \n",
+    "    gha_new_records = gha_file[~gha_file['Position ID'].isin(combined_existing_ids)].copy()\n",
+    "    open_pos_new_records = open_pos_file[~open_pos_file['Position ID'].isin(combined_existing_ids)].copy()\n",
     "\n",
-    "    # Identify new records in GHA not in master_df or previously in new_records\n",
-    "    gha_new_records = gha_file[~gha_file['Position ID'].isin(pd.concat([master_df['Position ID'], new_records['Position ID']]))]\n",
-    "    gha_new_records = gha_new_records.assign(Source='GHA', Month_Added=month)\n",
+    "    # Assign 'Source' and 'Month_Added' for new records\n",
+    "    gha_new_records['Source'] = 'GHA'\n",
+    "    open_pos_new_records['Source'] = 'Open Positions'\n",
+    "    gha_new_records['Month_Added'] = month\n",
+    "    open_pos_new_records['Month_Added'] = month\n",
     "\n",
-    "    # Identify new records in Open Positions not in master_df or previously in new_records\n",
-    "    open_pos_new_records = open_pos_file[~open_pos_file['Position ID'].isin(pd.concat([master_df['Position ID'], new_records['Position ID']]))]\n",
-    "    open_pos_new_records = open_pos_new_records.assign(Source='Open Positions', Month_Added=month)\n",
-    "\n",
-    "    # Concatenate the new records found this month to new_records\n",
+    "    # Combine the new records for the current month\n",
     "    new_month_records = pd.concat([gha_new_records, open_pos_new_records], ignore_index=True)\n",
     "\n",
-    "    # Add columns for all months in new_records and initialize all previous months to 0\n",
-    "    for mth in master_df.columns[2:]:  # Assuming month columns start from index 2 in master_df\n",
+    "    # Initialize columns for all months up to Dec 2024\n",
+    "    for mth in master_df.columns[2:]:  # Assuming month columns start from index 2\n",
     "        if mth < month:\n",
     "            new_month_records[mth] = 0\n",
     "        elif mth == month:\n",
@@ -58,8 +57,10 @@
     "        else:\n",
     "            new_month_records[mth] = np.nan\n",
     "\n",
-    "    # Filter to retain only the required columns in new_month_records\n",
+    "    # Ensure new_month_records has the exact columns as master_df plus 'Source' and 'Month_Added'\n",
     "    new_month_records = new_month_records[master_df.columns.tolist() + ['Source', 'Month_Added']]\n",
+    "\n",
+    "    # Concatenate new_month_records into new_records\n",
     "    new_records = pd.concat([new_records, new_month_records], ignore_index=True)\n",
     "\n",
     "    return master_df, new_records\n",
@@ -69,8 +70,8 @@
     "    open_pos_file = open_pos_monthly_files[month]\n",
     "    master_df, new_records = process_single_month(master_df, month, gha_file, open_pos_file, new_records)\n",
     "\n",
-    "# Fill any remaining NaN values in new_records with 0 for months not reached yet\n",
-    "for col in master_df.columns[2:]:  # Month columns assumed to start from index 2\n",
+    "# Fill remaining NaN values in new_records with 0 for months not reached yet\n",
+    "for col in master_df.columns[2:]:\n",
     "    new_records[col].fillna(0, inplace=True)\n",
     "\n",
     "# Display the updated DataFrames\n",
@@ -155,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e5c4114",
+   "id": "b2f26468",
    "metadata": {},
    "outputs": [],
    "source": []
