--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a27e678",
+   "id": "3908843e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,13 +18,7 @@
     "    gha_file['Position ID'] = gha_file['Position ID'].str.zfill(max_length)\n",
     "    open_pos_file['Position ID'] = open_pos_file['Position ID'].str.zfill(max_length)\n",
     "    \n",
-    "    # Ensure gha_file and open_pos_file have the same columns as master_df\n",
-    "    for file in [gha_file, open_pos_file]:\n",
-    "        for col in master_df.columns:\n",
-    "            if col not in file.columns:\n",
-    "                file[col] = np.nan  # Add any missing columns with NaN values\n",
-    "\n",
-    "    # Update master_df with 1 based on presence in GHA and Open Positions\n",
+    "    # Update master_df with 1/0 based on presence in GHA and Open Positions\n",
     "    master_df[month] = np.where(\n",
     "        master_df['Source'] == 'GHA', \n",
     "        master_df['Position ID'].apply(lambda x: 1 if x in gha_file['Position ID'].values else 0),\n",
@@ -43,20 +37,25 @@
     "    open_pos_new_records = open_pos_file[~open_pos_file['Position ID'].isin(pd.concat([master_df['Position ID'], new_records['Position ID']]))]\n",
     "    open_pos_new_records = open_pos_new_records.assign(Source='Open Positions', Month_Added=month)\n",
     "\n",
-    "    # Concatenate the new records found this month to new_records\n",
+    "    # Combine new records found this month into one DataFrame\n",
     "    new_month_records = pd.concat([gha_new_records, open_pos_new_records], ignore_index=True)\n",
     "\n",
-    "    # Add columns for all months in new_records and initialize all previous months to 0\n",
-    "    for mth in master_df.columns[2:]:  # Assuming month columns start from index 2 in master_df\n",
+    "    # Add presence columns for each month in new_records, filling prior months with 0\n",
+    "    for mth in master_df.columns[2:]:  # Assuming month columns start from index 2\n",
     "        if mth < month:\n",
-    "            new_month_records[mth] = 0\n",
+    "            new_month_records[mth] = 0  # Set prior months to 0\n",
     "        elif mth == month:\n",
-    "            new_month_records[mth] = 1\n",
+    "            new_month_records[mth] = new_month_records.apply(\n",
+    "                lambda row: 1 if row['Position ID'] in gha_file['Position ID'].values or row['Position ID'] in open_pos_file['Position ID'].values else 0,\n",
+    "                axis=1\n",
+    "            )\n",
     "        else:\n",
     "            new_month_records[mth] = np.nan\n",
     "\n",
-    "    # Fill in new_month_records with only the required columns\n",
+    "    # Trim new_month_records to only include columns in master_df + 'Month_Added'\n",
     "    new_month_records = new_month_records[master_df.columns.tolist() + ['Month_Added']]\n",
+    "\n",
+    "    # Append to new_records DataFrame\n",
     "    new_records = pd.concat([new_records, new_month_records], ignore_index=True)\n",
     "\n",
     "    return master_df, new_records\n",
@@ -152,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89aa52e6",
+   "id": "efa95cfa",
    "metadata": {},
    "outputs": [],
    "source": []
