--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -3,7 +3,88 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3908843e",
+   "id": "6cbec026",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Define columns to check for differences\n",
+    "columns_to_check = ['Global Career Band', 'BF Level 4 Name', 'Work Location Country/Territory Name']\n",
+    "columns_to_exclude = [col for col in master_df.columns if \"MoM\" in col]\n",
+    "columns_to_include = [col for col in master_df.columns if col not in columns_to_exclude]\n",
+    "\n",
+    "def identify_and_log_changes(master_df, gha_df, month):\n",
+    "    # Ensure consistency in data types for merging\n",
+    "    master_df['Position ID'] = master_df['Position ID'].astype(str)\n",
+    "    master_df['Employee ID'] = master_df['Employee ID'].astype(str)\n",
+    "    gha_df['Position ID'] = gha_df['Position ID'].astype(str)\n",
+    "    gha_df['Employee ID'] = gha_df['Employee ID'].astype(str)\n",
+    "\n",
+    "    # Merge on Position ID and Employee ID, using suffix to track changes\n",
+    "    merged_df = gha_df.merge(\n",
+    "        master_df[['Position ID', 'Employee ID'] + columns_to_check],\n",
+    "        on=['Position ID', 'Employee ID'],\n",
+    "        how='left',\n",
+    "        suffixes=('', '_master')\n",
+    "    )\n",
+    "\n",
+    "    # Initialize lists to store new and changed records\n",
+    "    new_records = []\n",
+    "    changes = []\n",
+    "\n",
+    "    # Check each row in merged_df for changes or new records\n",
+    "    for index, row in merged_df.iterrows():\n",
+    "        if pd.isna(row[columns_to_check[0] + '_master']):  # New record if master columns are NaN\n",
+    "            new_record = row[gha_df.columns].copy()  # Only take gha_df columns\n",
+    "            new_record['Description'] = 'New Record'\n",
+    "            new_record['Month'] = month\n",
+    "            new_records.append(new_record)\n",
+    "        else:\n",
+    "            # Check for changes in specified columns\n",
+    "            change_description = []\n",
+    "            for col in columns_to_check:\n",
+    "                if row[col] != row[col + '_master']:  # Detect change\n",
+    "                    change_description.append(f\"{col} Changed\")\n",
+    "\n",
+    "            # If changes were detected, log the row with the description\n",
+    "            if change_description:\n",
+    "                changed_row = row[gha_df.columns].copy()  # Only take gha_df columns\n",
+    "                changed_row['Description'] = '; '.join(change_description)\n",
+    "                changed_row['Month'] = month  # Capture the month when the change was detected\n",
+    "                changes.append(changed_row)\n",
+    "\n",
+    "    # Convert lists to DataFrames\n",
+    "    new_records_df = pd.DataFrame(new_records)\n",
+    "    changed_records_df = pd.DataFrame(changes)\n",
+    "\n",
+    "    # Combine new and changed records\n",
+    "    changes_df = pd.concat([new_records_df, changed_records_df], ignore_index=True)\n",
+    "\n",
+    "    # Filter only relevant columns for appending to master\n",
+    "    changes_df = changes_df[columns_to_include + ['Month', 'Description']]\n",
+    "\n",
+    "    # Append changes_df to master_df\n",
+    "    updated_master_df = pd.concat([master_df, changes_df], ignore_index=True)\n",
+    "\n",
+    "    return updated_master_df, changes_df\n",
+    "\n",
+    "# Example usage\n",
+    "current_month = 'Jan-24'\n",
+    "master_df, changes_df = identify_and_log_changes(master_df, gha_df, current_month)\n",
+    "\n",
+    "# Display results\n",
+    "print(\"Updated Master DataFrame:\")\n",
+    "print(master_df)\n",
+    "\n",
+    "print(\"\\nChanges DataFrame:\")\n",
+    "print(changes_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5934e33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efa95cfa",
+   "id": "12bc41dd",
    "metadata": {},
    "outputs": [],
    "source": []
