--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -3,88 +3,98 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cbec026",
+   "id": "19b3e392",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Define columns to check for differences\n",
-    "columns_to_check = ['Global Career Band', 'BF Level 4 Name', 'Work Location Country/Territory Name']\n",
-    "columns_to_exclude = [col for col in master_df.columns if \"MoM\" in col]\n",
-    "columns_to_include = [col for col in master_df.columns if col not in columns_to_exclude]\n",
+    "# List of columns to track for changes\n",
+    "columns_to_check = ['Global Career Band', 'BF Level 4 Name', 'Work Location Country/Territory Name', 'Work Location City']\n",
     "\n",
-    "def identify_and_log_changes(master_df, gha_df, month):\n",
-    "    # Ensure consistency in data types for merging\n",
+    "def track_changes_across_months(master_df, mom_gha_file, mom_open_positions_file, month):\n",
+    "    # Ensure consistency in data types\n",
     "    master_df['Position ID'] = master_df['Position ID'].astype(str)\n",
-    "    master_df['Employee ID'] = master_df['Employee ID'].astype(str)\n",
-    "    gha_df['Position ID'] = gha_df['Position ID'].astype(str)\n",
-    "    gha_df['Employee ID'] = gha_df['Employee ID'].astype(str)\n",
+    "    mom_gha_file['Position ID'] = mom_gha_file['Position ID'].astype(str)\n",
+    "    mom_gha_file['Employee ID'] = mom_gha_file['Employee ID'].astype(str)\n",
+    "    mom_open_positions_file['Position ID'] = mom_open_positions_file['Position ID'].astype(str)\n",
     "\n",
-    "    # Merge on Position ID and Employee ID, using suffix to track changes\n",
-    "    merged_df = gha_df.merge(\n",
-    "        master_df[['Position ID', 'Employee ID'] + columns_to_check],\n",
-    "        on=['Position ID', 'Employee ID'],\n",
-    "        how='left',\n",
-    "        suffixes=('', '_master')\n",
-    "    )\n",
+    "    # Initialize DataFrames to store changed and updated records\n",
+    "    changed_rows = []\n",
+    "    updated_rows = []\n",
     "\n",
-    "    # Initialize lists to store new and changed records\n",
-    "    new_records = []\n",
-    "    changes = []\n",
+    "    # Combine the merged dataframe with previous month's data\n",
+    "    merged_df = master_df.copy()\n",
     "\n",
-    "    # Check each row in merged_df for changes or new records\n",
+    "    # Track changes in GHA file (source == 'gha')\n",
     "    for index, row in merged_df.iterrows():\n",
-    "        if pd.isna(row[columns_to_check[0] + '_master']):  # New record if master columns are NaN\n",
-    "            new_record = row[gha_df.columns].copy()  # Only take gha_df columns\n",
-    "            new_record['Description'] = 'New Record'\n",
-    "            new_record['Month'] = month\n",
-    "            new_records.append(new_record)\n",
-    "        else:\n",
-    "            # Check for changes in specified columns\n",
-    "            change_description = []\n",
-    "            for col in columns_to_check:\n",
-    "                if row[col] != row[col + '_master']:  # Detect change\n",
-    "                    change_description.append(f\"{col} Changed\")\n",
+    "        pos_id = row['Position ID']\n",
+    "        emp_id = row['Employee ID']\n",
+    "        \n",
+    "        # Filter the mom_gha_file for the matching Position ID and Employee ID\n",
+    "        gha_match = mom_gha_file[(mom_gha_file['Position ID'] == pos_id) & (mom_gha_file['Employee ID'] == emp_id)]\n",
     "\n",
-    "            # If changes were detected, log the row with the description\n",
-    "            if change_description:\n",
-    "                changed_row = row[gha_df.columns].copy()  # Only take gha_df columns\n",
-    "                changed_row['Description'] = '; '.join(change_description)\n",
-    "                changed_row['Month'] = month  # Capture the month when the change was detected\n",
-    "                changes.append(changed_row)\n",
+    "        if not gha_match.empty:\n",
+    "            changes = []\n",
+    "            for col in columns_to_check:\n",
+    "                if row[col] != gha_match.iloc[0][col]:  # Compare values for the specified columns\n",
+    "                    changes.append(f\"{col} Changed\")\n",
+    "\n",
+    "            if changes:\n",
+    "                updated_row = row.copy()\n",
+    "                updated_row['Description'] = '; '.join(changes)\n",
+    "                updated_row['Month Changed'] = month\n",
+    "                updated_rows.append(updated_row)\n",
+    "\n",
+    "            # If combination of Position ID and Employee ID has changed (new employee or position), track as changed\n",
+    "            if len(gha_match) > 1:  # More than one match, indicating a position/employee mismatch\n",
+    "                changed_row = row.copy()\n",
+    "                changed_row['Description'] = 'Position/Employee ID mismatch'\n",
+    "                changed_row['Month Changed'] = month\n",
+    "                changed_rows.append(changed_row)\n",
+    "\n",
+    "    # Track changes in Open Positions file (source == 'open positions')\n",
+    "    for index, row in merged_df.iterrows():\n",
+    "        pos_id = row['Position ID']\n",
+    "\n",
+    "        # Filter the mom_open_positions_file for the matching Position ID\n",
+    "        open_pos_match = mom_open_positions_file[mom_open_positions_file['Position ID'] == pos_id]\n",
+    "\n",
+    "        if not open_pos_match.empty:\n",
+    "            changes = []\n",
+    "            for col in columns_to_check:\n",
+    "                # Exclude Work Location City and Employee ID from the comparison for Open Position\n",
+    "                if col != 'Work Location City' and col != 'Employee ID' and row[col] != open_pos_match.iloc[0][col]:\n",
+    "                    changes.append(f\"{col} Changed\")\n",
+    "\n",
+    "            if changes:\n",
+    "                updated_row = row.copy()\n",
+    "                updated_row['Description'] = '; '.join(changes)\n",
+    "                updated_row['Month Changed'] = month\n",
+    "                updated_rows.append(updated_row)\n",
     "\n",
     "    # Convert lists to DataFrames\n",
-    "    new_records_df = pd.DataFrame(new_records)\n",
-    "    changed_records_df = pd.DataFrame(changes)\n",
+    "    changed_rows_df = pd.DataFrame(changed_rows)\n",
+    "    updated_rows_df = pd.DataFrame(updated_rows)\n",
     "\n",
-    "    # Combine new and changed records\n",
-    "    changes_df = pd.concat([new_records_df, changed_records_df], ignore_index=True)\n",
+    "    return changed_rows_df, updated_rows_df\n",
     "\n",
-    "    # Filter only relevant columns for appending to master\n",
-    "    changes_df = changes_df[columns_to_include + ['Month', 'Description']]\n",
+    "# Example usage:\n",
+    "current_month = 'Mar-24'\n",
+    "changed_rows_df, updated_rows_df = track_changes_across_months(master_df, mom_gha_file, mom_open_positions_file, current_month)\n",
     "\n",
-    "    # Append changes_df to master_df\n",
-    "    updated_master_df = pd.concat([master_df, changes_df], ignore_index=True)\n",
+    "# Display the result\n",
+    "print(\"Changed Rows DataFrame:\")\n",
+    "print(changed_rows_df)\n",
     "\n",
-    "    return updated_master_df, changes_df\n",
-    "\n",
-    "# Example usage\n",
-    "current_month = 'Jan-24'\n",
-    "master_df, changes_df = identify_and_log_changes(master_df, gha_df, current_month)\n",
-    "\n",
-    "# Display results\n",
-    "print(\"Updated Master DataFrame:\")\n",
-    "print(master_df)\n",
-    "\n",
-    "print(\"\\nChanges DataFrame:\")\n",
-    "print(changes_df)\n"
+    "print(\"\\nUpdated Rows DataFrame:\")\n",
+    "print(updated_rows_df)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5934e33",
+   "id": "6842cc56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12bc41dd",
+   "id": "97b4b83c",
    "metadata": {},
    "outputs": [],
    "source": []
